<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/about_item_padding_right"
    android:paddingStart="@dimen/about_item_padding_left">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RLayout_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_item_height"
                android:background="@drawable/layout_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/about_name"
                    android:textColor="@color/all_item_left_text_color"
                    android:textSize="@dimen/about_item_text_size" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingEnd="5dp"
                    android:text="@string/robot_name"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/all_item_right_text_color"
                    android:textSize="@dimen/about_item_text_size" />

            </RelativeLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_divider_height"
                android:background="@color/all_divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_item_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/about_type"
                    android:textColor="@color/all_item_left_text_color"
                    android:textSize="@dimen/about_item_text_size" />

                <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingEnd="5dp"
                    android:text="@string/robot_type"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/all_item_right_text_color"
                    android:textSize="@dimen/about_item_text_size" />

            </RelativeLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_divider_height"
                android:background="@color/all_divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_item_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/about_serial_num"
                    android:textColor="@color/all_item_left_text_color"
                    android:textSize="@dimen/about_item_text_size" />

                <TextView
                    android:id="@+id/tv_serial_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="5dp"
                    android:text="@string/robot_serial_num"
                    android:textColor="@color/all_item_right_text_color"
                    android:textSize="@dimen/about_item_text_size" />
            </RelativeLayout>


            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_divider_height"
                android:background="@color/all_divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_item_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/robot_flash_space"
                    android:textColor="@color/all_item_left_text_color"
                    android:textSize="@dimen/about_item_text_size" />

                <TextView
                    android:id="@+id/tv_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="5dp"
                    android:text="@string/robot_os_version"
                    android:textColor="@color/all_item_right_text_color"
                    android:textSize="@dimen/about_item_text_size" />
            </RelativeLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_divider_height"
                android:background="@color/all_divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_item_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/about_os_version"
                    android:textColor="@color/all_item_left_text_color"
                    android:textSize="@dimen/about_item_text_size" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="5dp"
                    android:text="@string/robot_os_version"
                    android:textColor="@color/all_item_right_text_color"
                    android:textSize="@dimen/about_item_text_size" />
            </RelativeLayout>


            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_divider_height"
                android:background="@color/all_divider_color" />

            <RelativeLayout
                android:id="@+id/rl_system_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_item_height"
                android:background="@drawable/layout_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:text="@string/about_system_update"
                    android:textColor="@color/all_item_left_text_color"
                    android:textSize="@dimen/about_item_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="5dp"
                    android:text="@string/robot_system_update"
                    android:textColor="@color/all_item_right_text_color"
                    android:textSize="@dimen/about_item_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
