<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_root_RLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_dialog_close"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/tv_wraning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_fac_set_warn"
            android:textColor="#6c6c6c"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_wraning"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/background_dialog_button"
                android:text="@string/dialog_fac_set_cancle"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/background_dialog_button"
                android:text="@string/dialog_fac_set_confirm"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>